sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:6: error: not found: value n
                           if (plusPetit(n-i,n-i-1)) {echange(n-i,n-i-1)}
                                         ^AlgCocktailSort1:6: error: not found: value n
                           if (plusPetit(n-i,n-i-1)) {echange(n-i,n-i-1)}
                                             ^AlgCocktailSort1:6: error: not found: value n
                           if (plusPetit(n-i,n-i-1)) {echange(n-i,n-i-1)}
                                                              ^AlgCocktailSort1:6: error: not found: value n
                           if (plusPetit(n-i,n-i-1)) {echange(n-i,n-i-1)}
                                                                  ^